--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -27,6 +27,8 @@ on:
 env:
   INTEG_TESTS_INCLUDE_SCHEDULE: "*"
   INTEG_TESTS_EXCLUDE_SCHEDULE: "^dns_config$|^cluster_shutdown$|^version_update$|^oidc_config$|^smtp$|^role_"
+  EXAMPLES_INCLUDE: "*"
+  EXAMPLES_EXCLUDE: "^version_update_single_node$|^cluster_config$"
   WORKDIR: /work-dir/ansible_collections/scale_computing/hypercore
 # Run only one workflow for specific branch.
 concurrency:
@@ -43,8 +45,6 @@ jobs:
     env:
       DEBIAN_FRONTEND: noninteractive
       ANSIBLE_COLLECTIONS_PATH: /work-dir
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -67,13 +67,6 @@ jobs:
           ls -al tests/integration/integration_config.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_iso.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_vm.yml
-
-      - id: set-matrix
-        shell: bash
-        run: |-
-          echo "matrix=$(
-            ls -r $WORKDIR/examples | jq -R -s -c 'split("\n")[:-1]'
-          )" >> $GITHUB_OUTPUT
     if: "${{ github.event.inputs.integ_tests_include || github.event.schedule }}"
 
   integ-matrix:
@@ -107,10 +100,38 @@ jobs:
           )" >> $GITHUB_OUTPUT
     if: "${{ github.event.inputs.integ_tests_include || github.event.schedule }}"
 
+  examples-matrix:
+    runs-on: [ ubuntu-latest ]
+    container: python:3.10-slim-buster
+    env:
+      DEBIAN_FRONTEND: noninteractive
+      ANSIBLE_COLLECTIONS_PATH: /work-dir
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - run: apt update
+      - run: apt install -y jq
+      - run: mkdir -p $WORKDIR
+      - run: cp -a ./  $WORKDIR
+      # We want to run all integ tests periodically - "integ_tests_include || '*'", the '*' is used.
+      # When running with workflow-dispatch, user is required to put some non-empty string into integ_tests_include.
+      - run: echo 'EXAMPLES_INCLUDE=${{ github.event.inputs.integ_tests_include || env.EXAMPLES_INCLUDE }}' >> $GITHUB_ENV
+      - run: echo 'EXAMPLES_EXCLUDE=${{ github.event.inputs.integ_tests_exclude || env.EXAMPLES_EXCLUDE }}' >> $GITHUB_ENV
+
+      - id: set-matrix
+        shell: bash
+        run: |-
+          echo "matrix=$(
+            ls -r $WORKDIR/examples | jq -R -s -c 'split("\n")[:-1]'
+          )" >> $GITHUB_OUTPUT
+    if: "${{ github.event.inputs.integ_tests_include || github.event.schedule }}"
+
   integ:
     needs:
       - integ-matrix
-      - integration-prepare-env
+      - examples-matrix
       # - units-test
     runs-on: [self-hosted2]
     container: python:3.10-slim-buster
@@ -123,7 +144,7 @@ jobs:
         # python: [3.11]
         # test_name: [user_info]
         test_name: ${{ fromJson(needs.integ-matrix.outputs.matrix) }}
-        example_name: ${{ fromJson(needs.integration-prepare-env.outputs.matrix) }}
+        example_name: ${{ fromJson(needs.examples-matrix.outputs.matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
