Fix some examples to succeed in check mode
Problematic examples are visible in
https://github.com/ScaleComputing/HyperCoreAnsibleCollection/actions/runs/4366501744/jobs/7636604114

Create expected resources (demo-vm, etc).
Or fix code to exit early if running in check mode.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -65,6 +65,7 @@ jobs:
           ls -al tests/integration/integration_config.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_iso.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_vm.yml
+      - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_examples.yml
     if: "${{ github.event.inputs.integ_tests_include || github.event.schedule }}"
 
   integ-matrix:
