--- a/examples/time_zone_info.yml
+++ b/examples/time_zone_info.yml
@@ -6,7 +6,7 @@
 
   tasks:
     - name: List current Time Zone entries
-    - scale_computing.hypercore.time_zone_info:
+      scale_computing.hypercore.time_zone_info:
       register: time_zone_info
     - ansible.builtin.debug:
         msg: "{{ time_zone_info }}"
