Run only selected tasks of examples in check mode
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -54,7 +54,7 @@ jobs:
       - run: apt install -y jq
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
-      - run: ansible-galaxy collection install community.general
+      - run: ansible-galaxy collection install community.crypto community.general
       - run: |
           cd $WORKDIR
           echo "${{ vars.CI_CONFIG_HC_IP50 }}" > tests/integration/integration_config.yml
@@ -166,7 +166,7 @@ jobs:
           eval export SC_USERNAME=$(cat tests/integration/integration_config.yml | yq '.sc_username')
           eval export SC_PASSWORD=$(cat tests/integration/integration_config.yml | yq '.sc_password')
           eval export SC_TIMEOUT=$(cat tests/integration/integration_config.yml | yq '.sc_timeout')
-          ansible-playbook -i localhost, --check examples/${{ matrix.example_name }}
+          ansible-playbook -i localhost, -e hypercore_example_check_mode=true examples/${{ matrix.example_name }}
 
   integ:
     needs:
