--- a/examples/dns_config.yml
+++ b/examples/dns_config.yml
@@ -15,13 +15,14 @@
         dns_servers:
           - 1.2.3.4
           - 5.6.7.8
-        state: set
+        state: after  # or before
+
     # ------------------------------------------------------
+    # Configure system with valid DNS resolvers
     - name: Modify existing DNS config configurations
       scale_computing.hypercore.dns_config:
-        search_domains:
-          - example.domain.com
+        search_domains: []
         dns_servers:
-          - 0.0.0.1
-          - 0.0.1.0
-        state: before # or after
+          - 1.1.1.1
+          - 1.0.0.1
+        state: set
