Ci example and check mode (#161)
Run only selected tasks from examples in check mode

This will more realistically test the examples

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/list_vms_with_ide_disk.yml
+++ b/examples/list_vms_with_ide_disk.yml
@@ -36,7 +36,9 @@
                     break
         print(json.dumps(ide_vm_names))
       args:
-        executable: /usr/bin/python3
+        # /usr/bin/python3 - fedora
+        # /usr/local/bin/python - python:3.10-slim-buster docker image
+        executable: python3
         stdin: "{{ all_vms.records | to_json }}"
       changed_when: false
       register: ide_vm_names_result
@@ -53,3 +55,5 @@
       ansible.builtin.fail:
         msg: Found {{ ide_vm_names | length }} VMs using IDE disk
       when: ide_vm_names | length > 0
+      # VMs with IDE disks are created while testing. Ignore them if testing.
+      ignore_errors: "{{ hypercore_example_check_mode | default(false) }}"
