Update vm_snapshot modules.

--- a/tests/integration/targets/vm_snapshot_info/tasks/main.yml
+++ b/tests/integration/targets/vm_snapshot_info/tasks/main.yml
@@ -5,6 +5,8 @@
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
 
+
+  # TODO: update tests to work with other params - vm_name, serial
   block:
     # --------------------------------------------------------
 
