--- a/roles/version_update_single_node/tasks/update_status_check.yml
+++ b/roles/version_update_single_node/tasks/update_status_check.yml
@@ -3,7 +3,7 @@
   block:
     - name: Increment retry_count
       ansible.builtin.set_fact:
-        retry_count: "{{ 0 if retry_count is undefined else retries | int + 1 }}"
+        retry_count: "{{ 0 if retry_count is undefined else retry_count | int + 1 }}"
 
     # We might be able to remove this task
     - name: Pause before checking update status - checks will report FAILED-RETRYING until update COMPLETE/TERMINATED
