--- a/roles/check_local_time/tasks/main.yml
+++ b/roles/check_local_time/tasks/main.yml
@@ -10,10 +10,10 @@
       scale_computing.hypercore.time_zone_info:
       register: time_zone
 
-    - name: Check if local time is in time interval (run local_time.py)
+    - name: Check if local time is in time interval (run check_local_time.py)
       ansible.builtin.script:
         executable: python
-        cmd: local_time.py "{{ time_zone }}" "{{ time_interval }}"
+        cmd: check_local_time.py "{{ time_zone }}" "{{ time_interval }}"
       register: local_time_output
     
     - name: Assert that local time is in time interval
