--- a/roles/check_local_time/tasks/main.yml
+++ b/roles/check_local_time/tasks/main.yml
@@ -18,6 +18,7 @@
     
     - name: Assert that local time is in time interval
       ansible.builtin.assert:
-        msg: Local time is not in required time interval
+        fail_msg: Local time is not in required time interval
+        success_msg: Local time is in required time interval
         that:
          - local_time_output.stdout_lines[0] == "True"
