--- a/tests/integration/targets/virtual_disk/tasks/main.yml
+++ b/tests/integration/targets/virtual_disk/tasks/main.yml
@@ -10,10 +10,24 @@
     - name: Delete virtual disk files if exist
       scale_computing.hypercore.virtual_disk:
         state: absent
-        file_name: "{{ item }}"
+        name: "{{ item }}"
       loop:
         - xlab-ci-test-VD.qcow2
         - xlab-ci-test-VD.vmdk
+
+    - name: Assert cleanup was successful
+      scale_computing.hypercore.virtual_disk_info:
+        name: xlab-ci-test-VD.qcow2
+      register: virtual_disk_file
+      loop:
+        - xlab-ci-test-VD.qcow2
+        - xlab-ci-test-VD.vmdk
+    - ansible.builtin.assert:
+        that:
+          - virtual_disk_file is succeeded
+          - virtual_disk_file is not changed
+          - virtual_disk_file.results.0.records|length==0
+          - virtual_disk_file.results.1.records|length==0
 
     - name: Generate virtual disk file qcow2
       ansible.builtin.shell:
@@ -29,14 +43,18 @@
     - name: Upload virtual disk file .qcow2
       scale_computing.hypercore.virtual_disk:
         state: present
-        file_location: xlab-ci-test-VD.qcow2
-        file_name: xlab-ci-test-VD.qcow2
+        source: xlab-ci-test-VD.qcow2
+        name: xlab-ci-test-VD.qcow2
       register: uploaded_virtual_disk
     - ansible.builtin.assert:
         that:
           - uploaded_virtual_disk is succeeded
           - uploaded_virtual_disk is changed
+          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.qcow2"
+          - uploaded_virtual_disk.record.block_size == 1048576
+          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.size == 104857600
 
     - name: Assert that virtual disk .qcow2 exist on cluster
       scale_computing.hypercore.virtual_disk_info:
@@ -47,20 +65,29 @@
           - virtual_disk_file is succeeded
           - virtual_disk_file is not changed
           - virtual_disk_file.records | length == 1
+          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.qcow2"
+          - virtual_disk_file.records.0.block_size == 1048576
+          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.size == 104857600
+          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
 # ----------------------------------Idempotence check----------------------------------------------------------
     - name: Upload virtual disk file .qcow2 - IDEMPOTENCE
       scale_computing.hypercore.virtual_disk:
         state: present
-        file_location: xlab-ci-test-VD.qcow2
-        file_name: xlab-ci-test-VD.qcow2
+        source: xlab-ci-test-VD.qcow2
+        name: xlab-ci-test-VD.qcow2
       register: uploaded_virtual_disk
     - ansible.builtin.assert:
         that:
           - uploaded_virtual_disk is succeeded
-          - uploaded_virtual_disk is not changed
+          - uploaded_virtual_disk is changed
+          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.qcow2"
+          - uploaded_virtual_disk.record.block_size == 1048576
+          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.size == 104857600
           - uploaded_virtual_disk.diff.before == uploaded_virtual_disk.diff.after
 
     - name: Assert that virtual disk .qcow2 exist on cluster - IDEMPOTENCE
@@ -72,20 +99,29 @@
           - virtual_disk_file is succeeded
           - virtual_disk_file is not changed
           - virtual_disk_file.records | length == 1
+          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.qcow2"
+          - virtual_disk_file.records.0.block_size == 1048576
+          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.size == 104857600
+          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
 # ----------------------------------Job------------------------------------------------------------------------
     - name: Upload virtual disk file .vmdk
       scale_computing.hypercore.virtual_disk:
         state: present
-        file_location: xlab-ci-test-VD.vmdk
-        file_name: xlab-ci-test-VD.vmdk
+        source: xlab-ci-test-VD.vmdk
+        name: xlab-ci-test-VD.vmdk
       register: uploaded_virtual_disk
     - ansible.builtin.assert:
         that:
           - uploaded_virtual_disk is succeeded
           - uploaded_virtual_disk is changed
+          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.vmdk"
+          - uploaded_virtual_disk.record.block_size == 1048576
+          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.size == 104857600
 
     - name: Assert that virtual disk .vmdk exist on cluster
       scale_computing.hypercore.virtual_disk_info:
@@ -96,20 +132,29 @@
           - virtual_disk_file is succeeded
           - virtual_disk_file is not changed
           - virtual_disk_file.records | length == 1
+          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.vmdk"
+          - virtual_disk_file.records.0.block_size == 1048576
+          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.size == 104857600
+          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
 # ----------------------------------Idempotence check----------------------------------------------------------
     - name: Upload virtual disk file .vmdk - IDEMPOTENCE
       scale_computing.hypercore.virtual_disk:
         state: present
-        file_location: xlab-ci-test-VD.vmdk
-        file_name: xlab-ci-test-VD.vmdk
+        source: xlab-ci-test-VD.vmdk
+        name: xlab-ci-test-VD.vmdk
       register: uploaded_virtual_disk
     - ansible.builtin.assert:
         that:
           - uploaded_virtual_disk is succeeded
-          - uploaded_virtual_disk is not changed
+          - uploaded_virtual_disk is changed
+          - uploaded_virtual_disk.record.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - uploaded_virtual_disk.record.name == "xlab-ci-test-VD.vmdk"
+          - uploaded_virtual_disk.record.block_size == 1048576
+          - uploaded_virtual_disk.record.replication_factor == 2
+          - uploaded_virtual_disk.record.size == 104857600
           - uploaded_virtual_disk.diff.before == uploaded_virtual_disk.diff.after
 
     - name: Assert that virtual disk .vmdk exist on cluster - IDEMPOTENCE
@@ -121,13 +166,18 @@
           - virtual_disk_file is succeeded
           - virtual_disk_file is not changed
           - virtual_disk_file.records | length == 1
+          - virtual_disk_file.records.0.keys() | sort == ['block_size', 'name', 'replication_factor', 'size', 'uuid']
           - virtual_disk_file.records.0.name == "xlab-ci-test-VD.vmdk"
+          - virtual_disk_file.records.0.block_size == 1048576
+          - virtual_disk_file.records.0.replication_factor == 2
+          - virtual_disk_file.records.0.size == 104857600
+          - "{{ virtual_disk_file.records.0.uuid == uploaded_virtual_disk.record.uuid }}"
 
 # ----------------------------------Job------------------------------------------------------------------------
     - name: Delete virtual disk file .qcow2
       scale_computing.hypercore.virtual_disk:
         state: absent
-        file_name: xlab-ci-test-VD.qcow2
+        name: xlab-ci-test-VD.qcow2
       register: deleted_virtual_disk
     - ansible.builtin.assert:
         that:
@@ -149,7 +199,7 @@
     - name: Delete virtual disk file .qcow2 - IDEMPOTENCE
       scale_computing.hypercore.virtual_disk:
         state: absent
-        file_name: xlab-ci-test-VD.qcow2
+        name: xlab-ci-test-VD.qcow2
       register: deleted_virtual_disk
     - ansible.builtin.assert:
         that:
@@ -172,7 +222,7 @@
     - name: Delete virtual disk file .vmdk
       scale_computing.hypercore.virtual_disk:
         state: absent
-        file_name: xlab-ci-test-VD.vmdk
+        name: xlab-ci-test-VD.vmdk
       register: deleted_virtual_disk
     - ansible.builtin.assert:
         that:
@@ -194,7 +244,7 @@
     - name: Delete virtual disk file .vmdk - IDEMPOTENCE
       scale_computing.hypercore.virtual_disk:
         state: absent
-        file_name: xlab-ci-test-VD.vmdk
+        name: xlab-ci-test-VD.vmdk
       register: deleted_virtual_disk
     - ansible.builtin.assert:
         that:
