CI Remove also half-uploaded virtual disks
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/virtual_disk/tasks/main.yml
+++ b/tests/integration/targets/virtual_disk/tasks/main.yml
@@ -14,6 +14,9 @@
       loop:
         - xlab-ci-test-VD.qcow2
         - xlab-ci-test-VD.vmdk
+        # half-uploaded VD has "uploading-" magic prefix.
+        - uploading-xlab-ci-test-VD.qcow2
+        - uploading-xlab-ci-test-VD.vmdk
 
     - name: Assert cleanup was successful
       scale_computing.hypercore.virtual_disk_info:
