--- a/tests/integration/targets/certificate/tasks/02_ssl_eof_error.yml
+++ b/tests/integration/targets/certificate/tasks/02_ssl_eof_error.yml
@@ -37,9 +37,11 @@
 
     # get and run pyproxy.py
     - name: get pyproxy.py
-      ansible.builtin.get_url:
+      ansible.builtin.copy:
         # branch ssl-eof-error, commit 7df232733f4cf6deb24d886321ceb4812a114ca4, 2023.03.16
-        url: https://raw.githubusercontent.com/justinc1/pyproxy/ssl-eof-error/code/pyproxy.py
+        # url: https://raw.githubusercontent.com/justinc1/pyproxy/ssl-eof-error/code/pyproxy.py
+        # The file was committed into the collection.
+        src: files/pyproxy.py
         dest: /tmp/pyproxy.py
 
     - name: kill pyproxy.py before
