CI use scale_ci_integ:2 - includes sudo and pgrep
sudo is used when testing locally

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/ci-infra/docker-image/Dockerfile
+++ b/ci-infra/docker-image/Dockerfile
@@ -9,7 +9,7 @@ ARG ANSIBLE_CORE_VERSION
 
 ENV LANG=en_US.UTF-8
 
-RUN apt update && apt install -y git make smbclient genisoimage qemu-utils jq
+RUN apt update && apt install -y git make smbclient genisoimage qemu-utils jq sudo procps
 RUN pip install --upgrade pip wheel
 
 COPY all.requirements /code/ci-infra/docker-image/
